--- a/slack/index.html
+++ b/slack/index.html
@@ -20,7 +20,7 @@ title: C++ Language Slack Workspace
     <p class='text-xxs slack-paragraph'>Choose one of the following to get started:</p>
     <ul>
       <li class='slack-link'>
-        <a class='text-m link' href="https://cpplang-inviter.cppalliance.org/" id="reglink" target="_new">I need an invitation to the C++ Slack workspace.</a>
+        <a class='text-m link' href="https://cpplang.now.sh/" id="reglink" target="_new">I need an invitation to the C++ Slack workspace.</a>
       </li>
       <li class='slack-link'>
         <a class='text-m link' href="https://cpplang.slack.com">I already have a C++ Slack workspace account.</a>
