--- a/index.html
+++ b/index.html
@@ -166,31 +166,7 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           </span>
         </a>
       </div>
-
-      <div class='col-third'>
-        <a class='card' href='{{ site.baseurl }}/people/marshall'>
-          <div class='card-img-wrapper'>
-            <img class='card-img' src='{{ site.baseurl }}/images/people/marshall.jpg' alt='Marshall Clow'>
-          </div>
-          <span class='card-text'>
-            <h4 class='text-m card-title'>Marshall Clow</h4>
-            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
-          </span>
-        </a>
-      </div>
-
-      <div class='col-third'>
-        <a class='card' href='{{ site.baseurl }}/people/damian'>
-          <div class='card-img-wrapper'>
-            <img class='card-img' src='{{ site.baseurl }}/images/people/damian.jpg' alt='Damian Jarek'>
-          </div>
-          <span class='card-text'>
-            <h4 class='text-m card-title'>Damian Jarek</h4>
-            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
-          </span>
-        </a>
-      </div>
-
+      
       <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/glen'>
           <div class='card-img-wrapper'>
@@ -217,6 +193,38 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
     </div>
   </section>
 
+   <!-- Our Alumni section-->
+  <section class='section team' id='team'>
+    <div class='section-title'>
+      <h2 class='header text-xl'>Alumni</h2>
+      <h2 class='header-shadow dark'>Alumni</h2>
+    </div>
+
+    <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/marshall'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/marshall.jpg' alt='Marshall Clow'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Marshall Clow</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+    
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/damian'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/damian.jpg' alt='Damian Jarek'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Damian Jarek</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>    
+    </section>
+  
   <!-- News section-->
   <section class="section news" id='news'>
     <div class='section-title'>
