--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
   </section>
 
    <!-- Our Alumni section-->
-  <section class='section team' id='team'>
+  <section class='section alumni' id='alumni'>
     <div class='section-title'>
       <h2 class='header text-xl'>Alumni</h2>
       <h2 class='header-shadow dark'>Alumni</h2>
