Various site updates:
- Updated website logo - logo.svg
- Added Richard to the Team section
- Added Richard's bio: people/richard.html
- Removed facebook: contact.html
- Updated date to 2020 at bottom of page
- Updated bottom contact to info@cppalliance.org
- Added proposal page - proposals.html
- Replaced images/cpp.jpg with cpp.png
- Removed cpp.png

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 title: The C++ Alliance
-image: /images/cpp.jpg
 nav-class: transparent
 description: The C++ Alliance is dedicated to helping the C++ programming language evolve. We see it developing as an ecosystem of open source libraries and as a growing community of those who contribute to those libraries.
 ---
@@ -175,6 +174,18 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           <span class='card-text'>
             <h4 class='text-m card-title'>Glen Fernandes</h4>
             <h5 class='text-xs card-subtitle'>Technical Committee</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/richard'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/richard.jpg' alt='Richard Hodges'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Richard Hodges</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
           </span>
         </a>
       </div>
