Proposal page updates:
- Changed header text from 'Submissions' to 'Proposals'
- Adjusted the header text shadow

--- a/proposals.html
+++ b/proposals.html
@@ -10,8 +10,8 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
   <section class="section proposals row" id="proposals">
     <div class='col-half col-left'>
       <div class='section-title'>
-        <h2 class='header text-xl'>Submissions</h2>
-        <h2 class='header-shadow'>Submissions</h2>
+        <h2 class='header text-xl'>Proposals</h2>
+        <h2 class='header-shadow' style='left: 230px;'>Proposals</h2>
       </div>
 
       <h3 class="text-m section-subheader">Empower The C++ Community</h3>
