fix errors in links, typos and grammar

--- a/people/richard.html
+++ b/people/richard.html
@@ -42,12 +42,12 @@ led to his first self-financed purchase of a Motorola 6809-based personal comput
 assembler project was a device driver to connect a 1960s teletype printer to that machine in order to print out
 a Mother's Day message. Interestingly, the driver worked perfectly, but the printed message had a spelling mistake.</p>
 
-<p>This led to a summer job writing TMS9995 assembler for a gambling machine company as a Summer job at the age of 16.</p>
+<p>This led to a summer job writing TMS9995 assembler for a gambling machine company at the age of 16.</p>
 
 <p>Richard is of the view that while education is helpful in covering off the basics of computer programming, the
-most important drivers for becoming good at it are a love of it and mixing with people who are better than you.</p>
+most important drivers for becoming good at it are a love of the craft, and mixing with people who are better than you.</p>
 
-<p>He is grateful to have had the privilege to have worked with and learned from some of the finest minds on this planet.</p>
+<p>He is grateful to have been privileged to work with and learn from some of the finest minds on this planet.</p>
 
 <p>Q: Why work with the C++ Alliance?</p>
 
@@ -56,13 +56,13 @@ two languages - c++ and javascript. But then I discovered Emscripten, so we don'
 
 <p>Q: How did you learn of the Organisation?</p>
 
-<p>I used boost.beast in my last production system. A global mesh of market data distribution nodes that,
+<p>I used Boost.Beast in my last production system. A global mesh of market data distribution nodes that,
 for legacy reasons, had to communicate in HTTP and Websocket unsing JSON. My colleagues thought the obvious
-solution was Node.js. But I had seen that Boost1.69 contained the Beast library and I was intrigued. During
+solution was Node.js. But I had seen that Boost 1.69 contained the Beast library and I was intrigued. During
 the development I contacted Vinnie on the cpplang slack channel to ask a few questions... Now I am a
 maintainer of Boost.Beast</p>
 
-<p>What in your view is the most important challenge facing the c++ community?</p>
+<p>Q: What in your view is the most important challenge facing the c++ community?</p>
 
 <p><ol>
 <li>The lack of a fully-featured, cross-platform, standardised Web client and server framework that integrates
@@ -73,15 +73,16 @@ take no more than 10 seconds from sitting down at a terminal to having a fully p
 compiling and printing its first "Hello, World!" using any toolchain you like.</li>
 
 <li>Because of 2, the horrific difficulties faced by enthusiastic new c++ programmers when they want to write
-their first 3d graphics masterpiece. I have seen with my own eyes as enthusiasm turns to dissapointment,
+their first 3D graphics masterpiece. I have seen with my own eyes as enthusiasm turns to disappointment,
 causing programmers to reach for other languages where support is better.</li>
 </ol></p>
 
 <p>Q: What are your favourite things in C++ at the moment?</p>
 
 <p><ol>
-<li>Hunter for CMake - it almost completely solves the cross-platform development headaches mentioned above:
-https://github.com/cpp-pm/hunter Using this I can literally get a cross-platform project up and going in minutes,
+<li><a href="https://github.com/cpp-pm/hunter" target="_blank">Hunter for CMake</a> - it almost completely solves the cross-platform
+development headaches mentioned above.
+Using this I can literally get a cross-platform project up and going in minutes,
 confident that all dependencies will be found and compiled with the same toolchain file that I am using to
 build my project. It's a masterpiece.</li>
 
