Proposal page updates 2:
- Moved the shadow text to the left a bit
- Updated the page title to 'Proposals'

--- a/proposals.html
+++ b/proposals.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Submissions
+title: Proposals
 nav-class: dark
 description: The C++ Alliance is dedicated to helping the C++ programming language evolve. We see it developing as an ecosystem of open source libraries and as a growing community of those who contribute to those libraries.
 ---
@@ -11,7 +11,7 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
     <div class='col-half col-left'>
       <div class='section-title'>
         <h2 class='header text-xl'>Proposals</h2>
-        <h2 class='header-shadow' style='left: 230px;'>Proposals</h2>
+        <h2 class='header-shadow' style='left: 220px;'>Proposals</h2>
       </div>
 
       <h3 class="text-m section-subheader">Empower The C++ Community</h3>
