Fix em dash in Krystian's bio

--- a/people/krystian.html
+++ b/people/krystian.html
@@ -11,4 +11,4 @@ github: https://github.com/sdkrystian
 linkedin: https://www.linkedin.com/in/krystian-stasiowski-a393b0154/
 image: /images/people/krystian.jpg
 ---
-<p>Krystian is a first-year university student who has been programming for almost a decade, 2 years of which have been spent using C++. He is the author and maintainer of Boost.StaticString, and contributes to the C++ standard through authoring editorial issues, defect reports, and papers (P1839, P1945, P1997) - the first of which is on track to be incorporated into the coming standard..</p>
+<p>Krystian is a first-year university student who has been programming for almost a decade, 2 years of which have been spent using C++. He is the author and maintainer of Boost.StaticString, and contributes to the C++ standard through authoring editorial issues, defect reports, and papers (P1839, P1945, P1997) — the first of which is on track to be incorporated into the coming standard..</p>
