--- a/slack/index.html
+++ b/slack/index.html
@@ -18,9 +18,10 @@ title: C++ Language Slack Workspace
 
     <p class='text-xxs slack-paragraph'> This is a multi-channel Slack workspace environment which gathers users of C++ from around the world into the same place so we can all learn from each other. It is like IRC but with modern clients that support multimedia, notifications, and smart devices.</p>
     <p class='text-xxs slack-paragraph'>Choose one of the following to get started:</p>
+    <p class='text-xxs slack-paragraph'>The invite page is down for maintenance, check back in a day or two</p>
     <ul>
       <li class='slack-link'>
-        <a class='text-m link' href="https://cpplang-inviter.cppalliance.org/" id="reglink" target="_new">I need an invitation to the C++ Slack workspace.</a>
+        <a class='text-m link' href="https://cppalliance.org/slack/" id="reglink" target="_new">I need an invitation to the C++ Slack workspace.</a>
       </li>
       <li class='slack-link'>
         <a class='text-m link' href="https://cpplang.slack.com">I already have a C++ Slack workspace account.</a>
