Added Atom feed, Line-highlight of code-blocks, Pagination to news page
- Implemented the atom feed with Jekyll's Feed plugin: https://github.com/jekyll/jekyll-feed
- Added line-highlight feature on the code-block via prism.js
- Implemented pagination with Jekyll's pagination feature

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           </span>
         </a>
       </div>
-      
+
       <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/glen'>
           <div class='card-img-wrapper'>
@@ -234,8 +234,8 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
             <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
           </span>
         </a>
-      </div>   
-  
+      </div>
+
       <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/marshall'>
           <div class='card-img-wrapper'>
@@ -246,8 +246,8 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
             <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
           </span>
         </a>
-      </div> 
-      
+      </div>
+
       <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/jens'>
           <div class='card-img-wrapper'>
@@ -261,13 +261,16 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       </div>
     </div>
   </section>
-  
+
   <!-- News section-->
   <section class="section news" id='news'>
     <div class='section-title'>
       <h2 class='header text-xl'>News</h2>
       <h2 class='header-shadow'>News</h2>
     </div>
+    <a class="rss" href="{{ site.baseurl }}/feed.xml">
+      <img alt="RSS feed" class="icon-size" src="{{ site.baseurl }}/images/icons/rss.svg">
+    </a>
     <div class='news-content formatted-text'>
       <ul>
         {% for post in site.posts limit:6 %}
