Minor fix on View all news link of news section

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
         </li>
         {% endfor %}
         <li>
-          <a class='text-l all link' href="{{site.baseurl}}/news">View All News...</a>
+          <a class='text-l all link' href="{{site.baseurl}}/news/">View All News...</a>
         </li>
       </ul>
     </div>
