Add an AUP anchor to slack page

--- a/slack/index.html
+++ b/slack/index.html
@@ -56,7 +56,7 @@ title: C++ Language Slack Workspace
   </section>
 
   <section class="section">
-    <h2 class='header text-xl section-title'>Acceptable Use Policy</h2>
+    <h2 class='header text-xl section-title' id='AUP'>Acceptable Use Policy</h2>
     <ol>
 
       <li class='slack-list-item'>
