--- a/index.html
+++ b/index.html
@@ -201,6 +201,30 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           </span>
         </a>
       </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/emil'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/emil.jpg' alt='Emil Dotchevski'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Emil Dotchevski</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/dmitry'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/dmitry.jpg' alt='Dmitry Arkhipov'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Dmitry Arkhipov</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
     </div>
   </section>
 
