--- a/people/sam.html
+++ b/people/sam.html
@@ -4,8 +4,8 @@ nav-class: dark
 member-name: Sam Darwin
 id: sam
 title: Sam Darwin | The C++ Alliance
-position: DevOps Engineer
-email: samuel.d.darwin@gmail.com
+position: Chief Technology Officer
+email: sam@cppalliance.org
 site: https://www.samdarwin.com/
 github: https://github.com/sdarwin
 linkedin: https://www.linkedin.com/in/sam-darwin-359b472/
