--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           </div>
           <span class='card-text'>
             <h4 class='text-m card-title'>Sam Darwin</h4>
-            <h5 class='text-xs card-subtitle'>DevOps Engineer</h5>
+            <h5 class='text-xs card-subtitle'>Executive Team</h5>
           </span>
         </a>
       </div>
