--- a/index.html
+++ b/index.html
@@ -203,18 +203,6 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       </div>
 
       <div class='col-third'>
-        <a class='card' href='{{ site.baseurl }}/people/emil'>
-          <div class='card-img-wrapper'>
-            <img class='card-img' src='{{ site.baseurl }}/images/people/emil.jpg' alt='Emil Dotchevski'>
-          </div>
-          <span class='card-text'>
-            <h4 class='text-m card-title'>Emil Dotchevski</h4>
-            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
-          </span>
-        </a>
-      </div>
-
-      <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/dmitry'>
           <div class='card-img-wrapper'>
             <img class='card-img' src='{{ site.baseurl }}/images/people/dmitry.jpg' alt='Dmitry Arkhipov'>
@@ -233,6 +221,18 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           </div>
           <span class='card-text'>
             <h4 class='text-m card-title'>Alan Freitas</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/christian'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/christian.jpg' alt='Christian Mazakas'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Christian Mazakas</h4>
             <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
           </span>
         </a>
@@ -283,6 +283,19 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           </span>
         </a>
       </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/emil'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/emil.jpg' alt='Emil Dotchevski'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Emil Dotchevski</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
     </div>
   </section>
 
