Fix typo on Christian bio

--- a/people/christian.html
+++ b/people/christian.html
@@ -9,4 +9,4 @@ github: https://github.com/LeonineKing1199
 linkedin: https://www.linkedin.com/in/christian-mazakas-b0018869/
 image: /images/people/christian.jpg
 ---
-<p>Christian received his B.Sc. in physics where he studied cosmological simulation software which introduced him to C++ and a love of programming. He's worked in the web development industry for 5+ years and spent 2 years writing computer vision-based software routines in OpenCV. He fell in love with C++ and Boost after spending too much on the cpplang slack. When not programming, he enjoys wood-fired cooking and searching for the next greatest beers.</p>
+<p>Christian received his B.Sc. in physics where he studied cosmological simulation software which introduced him to C++ and a love of programming. He's worked in the web development industry for 5+ years and spent 2 years writing computer vision-based software routines in OpenCV. He fell in love with C++ and Boost after spending too much time on the cpplang slack. When not programming, he enjoys wood-fired cooking and searching for the next greatest beers.</p>
