Updated team section

--- a/index.html
+++ b/index.html
@@ -203,6 +203,18 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       </div>
 
       <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/morissa'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/morissa.jpg' alt='Dr. Morissa Schwartz'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Dr. Morissa Schwartz</h4>
+            <h5 class='text-xs card-subtitle'>Executive Team</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/dmitry'>
           <div class='card-img-wrapper'>
             <img class='card-img' src='{{ site.baseurl }}/images/people/dmitry.jpg' alt='Dmitry Arkhipov'>
