--- a/people/morissa.html
+++ b/people/morissa.html
@@ -6,6 +6,7 @@ id: morissa
 title: Dr. Morissa Schwartz | The C++ Alliance
 position: Director of Marketing and Communications
 email: Morissa@cppalliance.org
+twitter: https://twitter.com/MorissaSchwartz
 image: /images/people/morissa.jpg
 ---
 <p>
