Update team section with Seth profile

--- a/index.html
+++ b/index.html
@@ -249,6 +249,18 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           </span>
         </a>
       </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/seth'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/seth.jpg' alt='Seth Heeren'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Seth Heeren</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
     </div>
   </section>
 
