--- a/people/seth.html
+++ b/people/seth.html
@@ -6,7 +6,7 @@ id: seth
 title: Seth Heeren | The C++ Alliance
 position: Staff Engineer
 email: cppalliance@sehe.nl
-site: http://sehe.nl/
+site: https://sehe.nl/
 stack-overflow: https://stackoverflow.com/users/85371/sehe
 github: https://gist.github.com/sehe
 linkedin: https://www.linkedin.com/in/sethheeren
