Update team section

--- a/index.html
+++ b/index.html
@@ -203,18 +203,6 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       </div>
 
       <div class='col-third'>
-        <a class='card' href='{{ site.baseurl }}/people/morissa'>
-          <div class='card-img-wrapper'>
-            <img class='card-img' src='{{ site.baseurl }}/images/people/morissa.jpg' alt='Dr. Morissa Schwartz'>
-          </div>
-          <span class='card-text'>
-            <h4 class='text-m card-title'>Dr. Morissa Schwartz</h4>
-            <h5 class='text-xs card-subtitle'>Executive Team</h5>
-          </span>
-        </a>
-      </div>
-
-      <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/dmitry'>
           <div class='card-img-wrapper'>
             <img class='card-img' src='{{ site.baseurl }}/images/people/dmitry.jpg' alt='Dmitry Arkhipov'>
@@ -261,6 +249,31 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           </span>
         </a>
       </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/evan'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/evan.jpg' alt='Evan Lenz'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Evan Lenz</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/joaquin'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/joaquin.jpg' alt='Joaquín M López Muñoz'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'><center>Joaquín M López Muñoz<center></h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
     </div>
   </section>
 
@@ -316,6 +329,18 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           <span class='card-text'>
             <h4 class='text-m card-title'>Emil Dotchevski</h4>
             <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/morissa'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/morissa.jpg' alt='Dr. Morissa Schwartz'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Dr. Morissa Schwartz</h4>
+            <h5 class='text-xs card-subtitle'>Executive Team</h5>
           </span>
         </a>
       </div>
