--- a/slack/index.html
+++ b/slack/index.html
@@ -84,7 +84,7 @@ title: C++ Language Slack Workspace
 
       <li class='slack-list-item'>
         <h4 class='text-m'>Job offers</h4>
-        <p class='text-xxs'>Job offers are welcomed in the <strong>#jobs</strong> channel, but please include
+        <p class='text-xxs'>Job offers are welcomed in the <strong>#job-offers</strong> channel, but please include
         the location, the company, a link to details and keep it in the relevant
         room.</p>
       </li>
