--- a/index.html
+++ b/index.html
@@ -239,6 +239,18 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       </div>
 
       <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/klemens'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/klemens.jpg' alt='Klemens Morgenstern'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Klemens Morgenstern</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/seth'>
           <div class='card-img-wrapper'>
             <img class='card-img' src='{{ site.baseurl }}/images/people/seth.jpg' alt='Seth Heeren'>
