Updated team & alumni sections

--- a/index.html
+++ b/index.html
@@ -251,18 +251,6 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       </div>
 
       <div class='col-third'>
-        <a class='card' href='{{ site.baseurl }}/people/seth'>
-          <div class='card-img-wrapper'>
-            <img class='card-img' src='{{ site.baseurl }}/images/people/seth.jpg' alt='Seth Heeren'>
-          </div>
-          <span class='card-text'>
-            <h4 class='text-m card-title'>Seth Heeren</h4>
-            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
-          </span>
-        </a>
-      </div>
-
-      <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/evan'>
           <div class='card-img-wrapper'>
             <img class='card-img' src='{{ site.baseurl }}/images/people/evan.jpg' alt='Evan Lenz'>
@@ -281,6 +269,30 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           </div>
           <span class='card-text'>
             <h4 class='text-m card-title'><center>Joaquín M López Muñoz<center></h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/peter'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/peter.jpg' alt='Peter Turcan'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'><center>Peter Turcan<center></h4>
+            <h5 class='text-xs card-subtitle'>Senior Technical Writer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/matt'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/matt.jpg' alt='Matt Borland'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'><center>Matt Borland<center></h4>
             <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
           </span>
         </a>
@@ -353,6 +365,18 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           <span class='card-text'>
             <h4 class='text-m card-title'>Dr. Morissa Schwartz</h4>
             <h5 class='text-xs card-subtitle'>Executive Team</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/seth'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/seth.jpg' alt='Seth Heeren'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Seth Heeren</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
           </span>
         </a>
       </div>
