updated team section

--- a/index.html
+++ b/index.html
@@ -179,18 +179,6 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       </div>
 
       <div class='col-third'>
-        <a class='card' href='{{ site.baseurl }}/people/richard'>
-          <div class='card-img-wrapper'>
-            <img class='card-img' src='{{ site.baseurl }}/images/people/richard.jpg' alt='Richard Hodges'>
-          </div>
-          <span class='card-text'>
-            <h4 class='text-m card-title'>Richard Hodges</h4>
-            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
-          </span>
-        </a>
-      </div>
-
-      <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/sam'>
           <div class='card-img-wrapper'>
             <img class='card-img' src='{{ site.baseurl }}/images/people/sam.jpg' alt='Sam Darwin'>
@@ -251,18 +239,6 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       </div>
 
       <div class='col-third'>
-        <a class='card' href='{{ site.baseurl }}/people/evan'>
-          <div class='card-img-wrapper'>
-            <img class='card-img' src='{{ site.baseurl }}/images/people/evan.jpg' alt='Evan Lenz'>
-          </div>
-          <span class='card-text'>
-            <h4 class='text-m card-title'>Evan Lenz</h4>
-            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
-          </span>
-        </a>
-      </div>
-
-      <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/joaquin'>
           <div class='card-img-wrapper'>
             <img class='card-img' src='{{ site.baseurl }}/images/people/joaquin.jpg' alt='Joaquín M López Muñoz'>
@@ -298,6 +274,53 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
         </a>
       </div>
 
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/ruben'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/ruben.jpg' alt='Ruben Perez'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'><center>Ruben Perez<center></h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/nejati'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/nejati.jpg' alt='Mohammad Nejati'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'><center>Mohammad Nejati<center></h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/donovan'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/donovan.jpg' alt='Donovan Dikaio'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'><center>Donovan Dikaio<center></h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/richard'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/richard.jpg' alt='Richard Hodges'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Richard Hodges</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
     </div>
   </section>
 
@@ -309,18 +332,6 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
     </div>
 
     <div class='grid'>
-      <div class='col-third'>
-        <a class='card' href='{{ site.baseurl }}/people/damian'>
-          <div class='card-img-wrapper'>
-            <img class='card-img' src='{{ site.baseurl }}/images/people/damian.jpg' alt='Damian Jarek'>
-          </div>
-          <span class='card-text'>
-            <h4 class='text-m card-title'>Damian Jarek</h4>
-            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
-          </span>
-        </a>
-      </div>
-
       <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/marshall'>
           <div class='card-img-wrapper'>
@@ -340,6 +351,30 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
           </div>
           <span class='card-text'>
             <h4 class='text-m card-title'>Krystian Stasiowski</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/damian'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/damian.jpg' alt='Damian Jarek'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Damian Jarek</h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/evan'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/evan.jpg' alt='Evan Lenz'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>Evan Lenz</h4>
             <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
           </span>
         </a>
