--- a/index.html
+++ b/index.html
@@ -311,6 +311,19 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       </div>
 
       <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/nejati'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/spencer.jpg' alt='Spencer Strickland'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'><center>
+Spencer Strickland<center></h4>
+            <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+          
+      <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/richard'>
           <div class='card-img-wrapper'>
             <img class='card-img' src='{{ site.baseurl }}/images/people/richard.jpg' alt='Richard Hodges'>
