--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       </div>
 
       <div class='col-third'>
-        <a class='card' href='{{ site.baseurl }}/people/nejati'>
+        <a class='card' href='{{ site.baseurl }}/people/spencer'>
           <div class='card-img-wrapper'>
             <img class='card-img' src='{{ site.baseurl }}/images/people/spencer.jpg' alt='Spencer Strickland'>
           </div>
