--- a/index.html
+++ b/index.html
@@ -335,6 +335,19 @@ Fernando Pelliccioni<center></h4>
           </span>
         </a>
       </div>
+
+    <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/braden'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/braden.jpg' alt='Braden Ganetsky'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'><center>
+Braden Ganetsky<center></h4>
+            <h5 class='text-xs card-subtitle'>Contributor</h5>
+          </span>
+        </a>
+      </div>
             
 </section>
   
